Removed user settings.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /AweSamNet.EFEagerLoad/*.suo
 /AweSamNet.EFEagerLoad/AweSamNet.EFEagerLoad/obj
 /AweSamNet.EFEagerLoad/AweSamNet.EFEagerLoad/bin
+
+/AweSamNet.EFEagerLoad/AweSamNet.EFEagerLoad/*.user
